packages/astro/e2e/fixtures/errors/src/pages/astro-sass-error.astro
<h1>test</h1>

<style lang="scss">
  @use '../styles/inexistent' as *;
</style>
